Fix lowercase i on ios

--- a/assets/css/directives/ios-card.scss
+++ b/assets/css/directives/ios-card.scss
@@ -40,6 +40,10 @@
       font-size: 11px;
       line-height: 13px;
       text-transform: uppercase;
+
+      span {
+        text-transform: none;
+      }
     }
   }
 
